--- a/css/header.css
+++ b/css/header.css
@@ -6,9 +6,9 @@ header {
     justify-content: center;
     position: fixed;
     top: 0;
-    color: white;
-    background-color: #0b0b12;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    
+    background-color: #101015;
+    box-shadow: rgba(0, 0, 0, 0.605) 0px 3px 8px;
     /* border: #00F5F5 solid 2px; */
 }
 
@@ -18,18 +18,29 @@ nav {
     flex-direction: row;
     justify-content: center;
     width: 100%;
+
+    /* border: 2px red solid; */
 }
 
 nav ul {
     list-style-type: none;
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
+    width: 60%;
+
+    /* border: 2px blue solid; */
 }
 
 nav ul li {
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    gap: 2rem;
+
+    /* border: 2px green solid; */
+}
+
+nav ul li a {
+    text-decoration: none;
 }
