--- a/css/index-style.css
+++ b/css/index-style.css
@@ -11,6 +11,7 @@
     padding: 0;
     box-sizing: border-box;
     z-index: 99;
+    color: #fffee6;
 }
 
 body {
@@ -41,8 +42,6 @@ main {
     /* border: #00FF00 solid 2px; */
 } 
 
-
-
 footer{
     width: 100%;
     height: 4rem;
@@ -55,23 +54,58 @@ footer{
     /* border: #FF8000 solid 2px; */
 }
 
-.catergory-drink {
-    height: 80%;
-    width: auto;
+main article section{
+    margin: 0 1rem 0 1rem;
+    /* border: red solid 2px; */
+    display: flex;
+    flex-direction: column;
+    /* margin-bottom: 2rem; */
 }
 
-/* .slide{
-    animation-name: slide;
-    animation-duration: 10s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-} */
+main article section div.row {
+    /* border: red solid 2px; */
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 2rem;
+}
 
-/* @keyframes slide {
-    from {
-        transform: translateX(82vw);
-      }
-    to {
-        transform: translateX(-6vw); 
-      }
-}  */
+main article section div.column {
+    display: flex;
+    flex-direction: column;    
+    width: 50%;
+    /* border: black 1px solid;  */
+    padding: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.left {
+    margin-right: 1rem;
+    
+}
+.mid {
+
+}
+.right {
+    margin-left: 1rem;
+}
+
+.label {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+div.label img {
+    max-width: 100%;
+    margin: 1rem 2rem 0 2rem;
+    height: auto;
+    border-radius: 1rem;
+}
+
+div.label h3 {
+    margin-bottom: 0;
+}
+
+div.label p {
+    margin-top: 0;
+}
