--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,36 +1,32 @@
-.mySlides {
+.slideshow {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+.slides {
   display: none;
 }
 
-.mySlides img {
-  vertical-align: middle;
+div.slides a {
+  display: flex;
+  justify-content: center;
+} 
+
+.slides img {
   margin-top: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  height: 100%;
-  width: auto;
+  max-width: 95%;
   border-radius: 0.5rem;
-}
-
-.slideshow {
-  margin-top: 4rem;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 4.1rem;
 }
 
 /* The dots */
 .dot {
-  height: 1rem;
-  width: 1rem;
+  height: 0.5rem;
+  width: 1.5rem;
   margin: 0.6rem 0.12rem;
   background-color: #717171;
-  border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
