--- a/css/header.css
+++ b/css/header.css
@@ -1,46 +1,51 @@
-header {
-    width: 100%;
-    height: 4rem;
+/* nav {
+    font-size: 2rem;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    
-    background-color: #101015;
-    box-shadow: rgba(0, 0, 0, 0.605) 0px 3px 8px;
-    /* border: #00F5F5 solid 2px; */
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 0 15rem;
+    border: 2px red solid;
 }
+
+nav a img {
+    width: auto;
+    height: 100%;
+    float: left;
+}
+
+nav a {
+    list-style-type: none;
+    text-decoration: none;
+    border: 2px green solid;
+} */
 
 nav {
     font-size: 2rem;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     width: 100%;
-
-    /* border: 2px red solid; */
 }
 
-nav ul {
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 60%;
-
-    /* border: 2px blue solid; */
-}
-
-nav ul li {
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-
-    /* border: 2px green solid; */
-}
-
-nav ul li a {
+a {
     text-decoration: none;
+}
+
+nav > a:first-child {
+    float: left; 
+}
+
+nav a img {
+    height: 100%;
+    width: auto;
+    padding: 0.2rem 0 0.2rem 1rem;
+}
+
+nav div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    min-width: 60%;
+    transform: translateX(-2.5rem);
 }
