--- a/css/header.css
+++ b/css/header.css
@@ -1,25 +1,3 @@
-/* nav {
-    font-size: 2rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
-    padding: 0 15rem;
-    border: 2px red solid;
-}
-
-nav a img {
-    width: auto;
-    height: 100%;
-    float: left;
-}
-
-nav a {
-    list-style-type: none;
-    text-decoration: none;
-    border: 2px green solid;
-} */
-
 nav {
     font-size: 2rem;
     display: flex;
@@ -48,4 +26,8 @@ nav div {
     margin: 0 auto;
     min-width: 60%;
     transform: translateX(-2.5rem);
+}
+
+div > a:hover {
+    text-decoration: underline;
 }
