--- a/css/page-layout.css
+++ b/css/page-layout.css
@@ -19,19 +19,6 @@ a {
     text-decoration: none;
 }
 
-header {
-    width: 100%;
-    height: 4rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    background-color: #101015;
-    box-shadow: rgba(0, 0, 0, 0.605) 0px 3px 8px;
-    /* border: #00F5F5 solid 2px; */
-}
-
 body {
     background-image: url(../img/background-sharp.webp);
     background-size: cover;
@@ -46,6 +33,19 @@ body {
 }
 body::-webkit-scrollbar {
     display: none;
+}
+
+header {
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    background-color: #101015;
+    box-shadow: rgba(0, 0, 0, 0.605) 0px 3px 8px;
+    /* border: #00F5F5 solid 2px; */
 }
 
 main {
@@ -68,7 +68,7 @@ footer{
     position: relative;
     bottom: 0;
     box-shadow: rgba(0, 0, 0, 0.24) 0px -3px 8px;
-    background-color: #FF8000;
+    background-color: #101015;;
     /* border: #FF8000 solid 2px; */
 }
 
