--- a/css/alkoholtyper.css
+++ b/css/alkoholtyper.css
@@ -17,12 +17,20 @@ main article section div.row {
     margin-bottom: 2rem;
 }
 
-main article section div.column {
+.column {
     display: flex;
     flex-direction: column;    
     max-width: 30%;
     padding: 1rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    border-radius: 15px;
+}
+
+.column:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset, rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset, rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.column a:hover {
+    text-decoration: none;
 }
 
 .left {
@@ -39,17 +47,25 @@ main article section div.column {
     gap: 1rem;
 }
 
-div.label img {
+.column a {
+    display: inherit;
+    flex-direction: inherit;
+    gap: inherit;
+    
+
+}
+
+.label img {
     max-width: 100%;
-    margin: 1rem 2rem 0 2rem;
+    margin: 1rem 1rem 0 1rem;
     height: auto;
     border-radius: 1rem;
 }
 
-div.label h3 {
+.label h3 {
     margin-bottom: 0;
 }
 
-div.label p {
+.label p {
     margin-top: 0;
 }
