sitemap and robot files added

--- a/css/alkoholtyper.css
+++ b/css/alkoholtyper.css
@@ -1,3 +1,6 @@
+/* This file controls the style of the "alkoholtyper"-site 
+    between header and footer */
+
 main article {
     margin-top: 5rem;
 }
