--- a/css/index-main.css
+++ b/css/index-main.css
@@ -1,10 +1,12 @@
+/* This file controls the style of almost everything between the footer and header 
+    on the index-site */
+
 .section-heading {
     display: flex;
     align-items: center;
     width: 100%;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    
 }
 
 .line {
@@ -18,6 +20,7 @@
     padding: 0.15rem 1rem;
     background-color: #101015;
     border-radius: 0.25rem;
+    color: #92fccd;
 }
 
 main article section{
