--- a/css/cocktails.css
+++ b/css/cocktails.css
@@ -1,3 +1,6 @@
+/* This file controls the style of the "cocktails"-site 
+    between header and footer */
+
 main article {
     margin-top: 5rem;
 }
