--- a/css/page-layout.css
+++ b/css/page-layout.css
@@ -1,11 +1,21 @@
-:root { /* var(--blue); */
+/* This file controls the style of every sites basic layout
+    which includes the header, main-part (body) and footer 
+    and also sets the font */
+
+
+    /* These are variables which i intended on using in the beginning to set the 
+        theme of colors but i ended up hust inserting the hex-value at each 
+        location instead */
+/* :root {
     --primary: #55575d;
     --secondary: #101015;
     --tertiary: #fffee6;
     --quaternary: #E32636;
     --quinary: #FF8000;
-}
-
+} */ 
+ 
+/* This selector sets the values for all selectors, so it can be used as a 
+    reset for the website */
 * {
     margin: 0;
     padding: 0;
@@ -27,13 +37,11 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    -ms-overflow-style: none;  /* IE and Edge */
-    /* background-color: #E32636; */
-    /* border: #E32636 solid 2px; */
+    -ms-overflow-style: none; /* skjuler scrollbar på Edge */ 
 }
-body::-webkit-scrollbar {
+body::-webkit-scrollbar { /* skjuler scrollbar på Chrome */
     display: none;
-}
+} 
 
 header {
     width: 100%;
