--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -18,6 +18,7 @@ div.slides a {
 } 
 
 .slides img {
+  width: 100%;
   margin-top: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   max-width: 95%;
