--- a/css/alkoholtyper.css
+++ b/css/alkoholtyper.css
@@ -63,10 +63,13 @@ main article section div.row {
     border-radius: 1rem;
 }
 
-.label h3 {
+.label h2 {
     margin-bottom: 0;
 }
 
-.label p {
-    margin-top: 0;
+.label ul {
+    font-size: 1.2rem;
+    margin: 0 0 0 2rem;
+    line-height: 2rem;
+    list-style-type: circle;
 }
