--- a/css/tequila.css
+++ b/css/tequila.css
@@ -1,20 +1,87 @@
-/* This file controls the style for the "tequila"-site 
-    between header and footer */
+/* This file controls the style for the "tequila" and "gin"-site as the layout are
+    completely identical */
 
-    .headline {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        font-size: 4rem;
-        font-weight: bold;
-        color: #92fccd;
-        margin: 5rem 1rem 0 1rem;
-        border: 2px solid red;
-    }
+.headline {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 4rem;
+    font-weight: bold;
+    text-decoration: underline;
+    color: #92fccd;
+    margin: 5rem 1rem 0 1rem;
+}
 
-    main article {
-        margin: 1rem 1rem 0  1rem;
-        border: 2px solid red;
-    }
-    
-    
+.recipes {
+    margin: 5rem 2rem 4rem 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 2rem 2rem 2rem;
+    width: 40%;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    border-radius: 1.2rem;
+}
+
+.label {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    min-height: 18rem;
+}
+
+h2 {
+    align-self: center;
+
+}
+
+ul {
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+    position: relative;
+    /* border: 2px solid red; */
+}
+
+li {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0.5rem;
+    min-height: 1.8rem;
+    clear: both;
+    /* border: 2px solid green; */
+}
+
+.amount {
+    margin-right: 1rem;
+    color: #92fccd;
+    float: left;
+}
+
+.ingredient {
+    position: absolute;
+    left: 4rem;
+    align-self: center;
+    /* border: 2px solid yellow; */
+}
+
+hr {
+    border: 0;
+    height: 0.2rem;
+    background-color: #3c3c3c; 
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.howto {
+    margin-top: 1rem;
+}
+
+p{
+    margin-bottom: 0.6rem;
+    font-size: 1.1rem;
+}
