--- a/css/tequila.css
+++ b/css/tequila.css
@@ -27,6 +27,7 @@
     width: 40%;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     border-radius: 1.2rem;
+    border: #101015 solid 2px;
 }
 
 .label {
