long drinks site done

--- a/css/page-layout.css
+++ b/css/page-layout.css
@@ -3,7 +3,7 @@
     and also sets the font */
 
 
-    /* These are variables which i intended on using in the beginning to set the 
+    /* These are variables which I intended on using in the beginning to set the 
         theme of colors but i ended up hust inserting the hex-value at each 
         location instead */
 /* :root {
