--- a/css/longdrinks.css
+++ b/css/longdrinks.css
@@ -1,87 +1,112 @@
-/* This file controls the style for the "tequila" and "gin"-site as the layout are
-    completely identical */
+.headline {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 4rem;
+    font-weight: bold;
+    text-decoration: underline;
+    color: #92fccd;
+    margin: 5rem 1rem 3rem 1rem;
+}
 
-    .headline {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        font-size: 4rem;
-        font-weight: bold;
-        text-decoration: underline;
-        color: #92fccd;
-        margin: 5rem 1rem 0 1rem;
-    }
-    
-    .recipes {
-        margin: 5rem 2rem 4rem 2rem;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-    
-    }
-    
-    .card {
-        display: flex;
-        flex-direction: column;
-        padding: 1rem 2rem 2rem 2rem;
-        width: 40%;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-        border-radius: 1.2rem;
-    }
-    
-    .label {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        min-height: 18rem;
-    }
-    
-    h2 {
-        align-self: center;
-    
-    }
-    
-    ul {
-        margin-bottom: 1rem;
-        font-size: 1.2rem;
-        position: relative;
-        /* border: 2px solid red; */
-    }
-    
-    li {
-        display: flex;
-        flex-direction: row;
-        margin-bottom: 0.5rem;
-        min-height: 1.8rem;
-        clear: both;
-        /* border: 2px solid green; */
-    }
-    
-    .amount {
-        margin-right: 1rem;
-        color: #92fccd;
-        float: left;
-    }
-    
-    .ingredient {
-        position: absolute;
-        left: 4rem;
-        align-self: center;
-        /* border: 2px solid yellow; */
-    }
-    
-    hr {
-        border: 0;
-        height: 0.2rem;
-        background-color: #3c3c3c; 
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    }
-    
-    .howto {
-        margin-top: 1rem;
-    }
-    
-    p{
-        margin-bottom: 0.6rem;
-        font-size: 1.1rem;
-    }
+.description {
+    margin: 0 2rem;
+}
+
+.textbox {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50%;
+    padding: 0 1rem;
+}
+
+p{
+    margin-bottom: 0.6rem;
+    font-size: 1.1rem;
+    line-height: 2rem;
+}
+
+.description > img {
+    max-width: 100%;
+}
+
+.recipes {
+    margin: 5rem 2rem 4rem 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 2rem 2rem 2rem;
+    width: 40%;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    border-radius: 1.2rem;
+    border: #101015 solid 2px;
+}
+
+.label {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    min-height: 18rem;
+}
+
+h2 {
+    align-self: center;
+
+}
+
+ul {
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+    position: relative;
+    /* border: 2px solid red; */
+}
+
+li {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0.5rem;
+    min-height: 1.8rem;
+    clear: both;
+    /* border: 2px solid green; */
+}
+
+.amount {
+    margin-right: 1rem;
+    color: #92fccd;
+    float: left;
+}
+
+.ingredient {
+    position: absolute;
+    left: 4rem;
+    align-self: center;
+    /* border: 2px solid yellow; */
+}
+
+hr {
+    border: 0;
+    height: 0.2rem;
+    background-color: #3c3c3c; 
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.howto {
+    margin-top: 1rem;
+}
+
+.howto > p{
+    line-height: auto;
+}
