--- a/css/alkoholtyper.css
+++ b/css/alkoholtyper.css
@@ -12,7 +12,7 @@ main article section{
     flex-direction: column;
 }
 
-main article section div.row {
+main article section .row {
     /* border: red solid 2px; */
     display: flex;
     flex-direction: row;
